--- a/api-reference/payouts/get-payout-status.mdx
+++ b/api-reference/payouts/get-payout-status.mdx
@@ -1,6 +1,6 @@
 ---
 title: 'Get Payout Status'
-api: 'GET https://api.fossapay.com/v1/payouts/{payout_id}'
+api: 'GET https://api-staging.fossapay.com/v1/payouts/{payout_id}'
 description: 'Check the status of a payout'
 ---
 
@@ -13,7 +13,7 @@ description: 'Check the status of a payout'
 ## Request Example
 
 ```bash
-curl https://api.fossapay.com/v1/payouts/pay_abc123 \
+curl https://api-staging.fossapay.com/v1/payouts/pay_abc123 \
   -H "Authorization: Bearer fp_live_sk_xxxxxxxx"
 ```
 
