--- a/guides/reconciliation.mdx
+++ b/guides/reconciliation.mdx
@@ -463,8 +463,8 @@ async function checkMissedWebhooks() {
   <Card title="Webhooks" icon="webhook" href="/concepts/webhooks">
     Handle webhooks properly
   </Card>
-  <Card title="Transactions API" icon="code" href="/api-reference/collections/list-transactions">
-    Query transaction history
+  <Card title="Wallet Transactions API" icon="code" href="/api-reference/virtual-account/wallet-transactions">
+    Query wallet transaction history
   </Card>
   <Card title="Dashboard" icon="chart-line" href="https://dashboard.fossapay.com">
     View reconciliation reports
