--- a/api-reference/crypto-wallets/get-wallet-by-id.mdx
+++ b/api-reference/crypto-wallets/get-wallet-by-id.mdx
@@ -37,7 +37,7 @@ const wallet = await client.cryptoWallets.getById('user:u3d');
   "message": "Crypto wallet retrieved successfully",
   "data": [
     {
-      "address": "CcnysYh3Y1ZLqPxkazFyiTx76Upv12iP4sNGeHA2H4z2",
+      "address": "GbnnysYh3Y1ZLqPxkaz....76Upv12iP4sNGeHA2H4z2",
       "network": "solana",
       "tokens": {
         "usdc": {
