--- a/api-reference/crypto-wallets/create-wallet.mdx
+++ b/api-reference/crypto-wallets/create-wallet.mdx
@@ -46,7 +46,7 @@ const cryptoWallet = await client.cryptoWallets.create({
   "message": "Crypto wallet created successfully",
   "data": {
     "walletId": "user:u3d",
-    "address": "0x71C7656EC7ab88b098defB751B7401B5f6d8976F",
+    "address": "8a0BY97fxiX26Pe2ckc3ke...z5MtWBCVk4pEx96Sqeb",
     "network": "solana"
   }
 }
